--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,12 +1,10 @@
-parameters:
-  - name: deploy
-    type: boolean
-    default: false
-
 trigger:
   branches:
     include:
       - master
+
+variables:
+  deploy: false
 
 pool:
   vmImage: 'ubuntu-latest'
@@ -31,7 +29,7 @@ steps:
   displayName: 'Run tests'
 
 - task: AzureWebApp@1
-  condition: eq(parameters.deploy, true)
+  condition: eq(variables['deploy'}, 'true')
   inputs:
     azureSubscription: 'azure-sp-connection'  # <- tu daj nazwę swojego service connection
     appName: 'azure-flask-app-calculator'     # <- nazwa Twojego App Service
