--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,7 +27,7 @@ steps:
   displayName: 'Run tests'
 
 - task: AzureWebApp@1
-  condition: eq(variables['deploy'}, 'true')
+  condition: eq(variables['deploy'], 'true')
   inputs:
     azureSubscription: 'azure-sp-connection'  # <- tu daj nazwę swojego service connection
     appName: 'azure-flask-app-calculator'     # <- nazwa Twojego App Service
