Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,12 @@ pool:
   vmImage: 'ubuntu-latest'
 
 variables:
-  pythonVersion: '3.11'
+  - name: pythonVersion
+    value: '3.11'
+  
+  - name: deploy
+    value: 'false'
+
 
 steps:
 - task: UsePythonVersion@0
