--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,6 +6,8 @@ trigger:
 pool:
   vmImage: 'ubuntu-latest'
 
+name: $(Build.DefinitionName)_$(Year:yyyy).$(Month).$(DayOfMonth)$(Rev:.r)
+
 variables:
   - name: pythonVersion
     value: '3.11'
