--- a/azure-pipelines-docker.yml
+++ b/azure-pipelines-docker.yml
@@ -22,9 +22,20 @@ steps:
   displayName: 'Install deps & run tests'
 
 - task: Docker@2
-  displayName: 'Build Docker Image'
+  displayName: 'Build Docker image'
   inputs:
-    command: build
+    containerRegistry: 'acr-marek'  # <<< ZMIEŃ na nazwę Twojego service connection do ACR
+    repository: '$(imageName)'
+    command: 'build'
     Dockerfile: '**/Dockerfile'
     tags: |
-      $(imageName):$(Build.BuildId)
+      $(Build.BuildId)
+
+- task: Docker@2
+  displayName: 'Push Docker image to ACR'
+  inputs:
+    containerRegistry: 'acr-marek'  # <<< ZMIEŃ na tę samą nazwę
+    repository: '$(imageName)'
+    command: 'push'
+    tags: |
+      $(Build.BuildId)
